--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -128,6 +128,40 @@ select[multiple], select[size] {
 	animation: spin .7s infinite linear;
 }
 
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+@-webkit-keyframes spin {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+@-moz-keyframes spin {
+    from {
+        -moz-transform: rotate(0deg);
+    }
+    to {
+        -moz-transform: rotate(360deg);
+    }
+}
+@-ms-keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+    }
+}
+
+
 @
 -webkit-keyframes spin2 {from { -webkit-transform:rotate(0deg);
 	
@@ -407,7 +441,7 @@ div.form-group>label.control-label {
 	background-image: url(/CEV/images/cev-icons.png);
 	height: 32px;
 	width: 32px;
-	transition: all 0.5s;
+	transition: all 0.05s;
 }
 
 .ui-state-default .ui-icon:hover {
