--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -128,40 +128,46 @@ select[multiple], select[size] {
 	animation: spin .7s infinite linear;
 }
 
-@keyframes spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes spin {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-@-moz-keyframes spin {
-    from {
-        -moz-transform: rotate(0deg);
-    }
-    to {
-        -moz-transform: rotate(360deg);
-    }
-}
-@-ms-keyframes spin {
-    from {
-        -ms-transform: rotate(0deg);
-    }
-    to {
-        -ms-transform: rotate(360deg);
-    }
+@
+keyframes spin {from { transform:rotate(0deg);
+	
 }
 
+to {
+	transform: rotate(360deg);
+}
 
+}
+@
+-webkit-keyframes spin {from { -webkit-transform:rotate(0deg);
+	
+}
+
+to {
+	-webkit-transform: rotate(360deg);
+}
+
+}
+@
+-moz-keyframes spin {from { -moz-transform:rotate(0deg);
+	
+}
+
+to {
+	-moz-transform: rotate(360deg);
+}
+
+}
+@
+-ms-keyframes spin {from { -ms-transform:rotate(0deg);
+	
+}
+
+to {
+	-ms-transform: rotate(360deg);
+}
+
+}
 @
 -webkit-keyframes spin2 {from { -webkit-transform:rotate(0deg);
 	
@@ -442,6 +448,7 @@ div.form-group>label.control-label {
 	height: 32px;
 	width: 32px;
 	transition: all 0.05s;
+	cursor: pointer;
 }
 
 .ui-state-default .ui-icon:hover {
