Cambios en los usuarios en su nivel de acceso
Implementamos binario para permisos
Gestión de Usuarios
Inicio de Gestion de modulos y roles

--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -507,3 +507,16 @@ div.form-group>label.control-label {
 .ui-button-icon-only .ui-icon {
 	margin-left: -15px;
 }
+
+.ui-icon-bullet {
+	background-position: -2px -5px;
+}
+
+.ui-radiobutton .ui-radiobutton-box {
+	width: 26px;
+    height: 26px;
+}
+
+.ui-selectoneradio label {
+	margin: 0 16px 0 20px;
+}
