--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -128,61 +128,56 @@ select[multiple], select[size] {
 	animation: spin .7s infinite linear;
 }
 
-@
-keyframes spin {from { transform:rotate(0deg);
+@keyframes spin {
+	from {
+		transform:rotate(0deg);
+	}
 	
+	to {
+		transform: rotate(360deg);
+	}
 }
 
-to {
-	transform: rotate(360deg);
-}
-
-}
-@
--webkit-keyframes spin {from { -webkit-transform:rotate(0deg);
+@-webkit-keyframes spin {
+	from {
+		-webkit-transform:rotate(0deg);
+	}
 	
+	to {
+		-webkit-transform: rotate(360deg);
+	}
 }
 
-to {
-	-webkit-transform: rotate(360deg);
+@-moz-keyframes spin {
+	from {
+		-moz-transform:rotate(0deg);
+	}
+
+	to {
+		-moz-transform: rotate(360deg);
+	}
 }
 
+@-ms-keyframes spin {
+	from {
+		-ms-transform:rotate(0deg);
+	}
+
+	to {
+		-ms-transform: rotate(360deg);
+	}
 }
-@
--moz-keyframes spin {from { -moz-transform:rotate(0deg);
+
+@-webkit-keyframes spin2 {
+	from {
+		-webkit-transform:rotate(0deg);
+	}
 	
+	to {
+		-webkit-transform: rotate(360deg);
+	}
 }
 
-to {
-	-moz-transform: rotate(360deg);
-}
-
-}
-@
--ms-keyframes spin {from { -ms-transform:rotate(0deg);
-	
-}
-
-to {
-	-ms-transform: rotate(360deg);
-}
-
-}
-@
--webkit-keyframes spin2 {from { -webkit-transform:rotate(0deg);
-	
-}
-
-to {
-	-webkit-transform: rotate(360deg);
-}
-
-}
-to {
-	-webkit-transform: rotate(360deg);
-}
-
-}
 div.logo-dashboard {
 	width: 50%;
 	margin: -3em auto -3em auto;
