--- a/src/main/webapp/css/slider.css
+++ b/src/main/webapp/css/slider.css
@@ -101,7 +101,7 @@
 	bottom: 0px;
 	width: 980px;
 	height: 100px;
-	background-color: #4b6f24c4;
+	background-color: #5d9e05a8;
 }
 
 #mainSlider {
@@ -153,7 +153,7 @@
 	top: 0;
 	left: 0;
 	box-sizing: border-box;
-	background: #000;
+	background: #86ff00b5;
 }
 
 .thumbNav .p .cv {
@@ -162,7 +162,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	border: 2px solid #000;
+	border: none;
 	box-sizing: border-box;
 	z-index: 1;
 }
@@ -212,12 +212,38 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: auto;
 	height: 100%;
 	border: none;
 	opacity: .6;
+	margin-left: 16.66666%;
 }
 
 .thumbNav .pav .t, .thumbNav .p:hover .t {
 	opacity: 1;
+}
+
+.thumbNav .p {
+	background-color: #4a6d04;
+	background-image: radial-gradient(circle at 100% 150%, #4a6d04 24%, #5b7205 25%, #5b7205
+		28%, #4a6d04 29%, #4a6d04 36%, #5b7205 36%, #5b7205 40%, transparent
+		40%, transparent),
+		radial-gradient(circle at 0 150%, #4a6d04 24%, #5b7205 25%, #5b7205 28%,
+		#4a6d04 29%, #4a6d04 36%, #5b7205 36%, #5b7205 40%, transparent 40%,
+		transparent),
+		radial-gradient(circle at 50% 100%, #5b7205 10%, #4a6d04 11%, #4a6d04
+		23%, #5b7205 24%, #5b7205 30%, #4a6d04 31%, #4a6d04 43%, #5b7205 44%,
+		#5b7205 50%, #4a6d04 51%, #4a6d04 63%, #5b7205 64%, #5b7205 71%,
+		transparent 71%, transparent),
+		radial-gradient(circle at 100% 50%, #5b7205 5%, #4a6d04 6%, #4a6d04 15%,
+		#5b7205 16%, #5b7205 20%, #4a6d04 21%, #4a6d04 30%, #5b7205 31%,
+		#5b7205 35%, #4a6d04 36%, #4a6d04 45%, #5b7205 46%, #5b7205 49%,
+		transparent 50%, transparent),
+		radial-gradient(circle at 0 50%, #5b7205 5%, #4a6d04 6%, #4a6d04 15%,
+		#5b7205 16%, #5b7205 20%, #4a6d04 21%, #4a6d04 30%, #5b7205 31%,
+		#5b7205 35%, #4a6d04 36%, #4a6d04 45%, #5b7205 46%, #5b7205 49%,
+		transparent 50%, transparent);
+	background-size: 100px 50px;
+	background-color: #4b6f24c4;
+	border-color: #4b6f24c4;
 }
